--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">DuoLaWeather</string>
+    <string name="app_name">多啦天气</string>
+    <string name="china">中国</string>
+    <string name="loading">正在加载...</string>
+    <string name="load_fail">加载失败</string>
+
 </resources>
